--- a/css/eye_of_providence.css
+++ b/css/eye_of_providence.css
@@ -13,6 +13,7 @@ body {
 	margin: 1%;
 	/* border: solid 1em rgba(0,0,0,0.5); */
 	/* box-shadow: inset 0 0 5em red; */
+	background-color: #bbb;
 	background: -webkit-linear-gradient(top, #eee, #201616) fixed;
 	background-attachment: fixed;
 	overflow: auto;
